# BloatPad

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  callbacks.h  main.c
